# regory

./: README.md  pyproject.toml
regory/: engine.py
tests/: test_engine.py
