[tool.poetry]
name = "regory"
version = "0.0.1"
description = "Regex-like golfing language"
authors = ["Patrick Reader <_@pxeger.com>"]
license = "Artistic License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
libgolf = "^0.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
